[tool.poetry]
name = "primer3plus"
version = "1.0.6"
description = "An easy-to-use Python API for Primer3 primer design."
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://github.com/jvrana/primer3-py-plus"
documentation = "https://jvrana.github.io/primer3-py-plus/"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta"
]
readme = "README.md"
    
[tool.poetry.dependencies]
python = "^3.5"
primer3-py = "^0.6.0"
loggable-jdv = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "*", allows-prereleases = true, python ='>=3.6'}
pre-commit = "^1.18"
flake8 = "^3.7"
docformatter = "^1.3"
sphinx = "^2.2"
recommonmark = "^0.6.0"
tox = "^3.14"
tox-conda = "^0.2.1"
sphinx_autodoc_typehints = {version = "^1.8", python = ">=3.6"}
autodocsumm = "^0.1.11"
pandas = {version = "^0.25.1", python = ">=3.6"}
sphinx_rtd_theme = "^0.4.3"
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

