[tool.poetry]
name = "primer3plus"
version = "1.0.8"
description = "An easy-to-use Python API for Primer3 primer design."
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://github.com/jvrana/primer3-py-plus"
documentation = "https://jvrana.github.io/primer3-py-plus/"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta"
]
readme = "README.md"
    
[tool.poetry.dependencies]
python = "^3.5.2"
primer3-py = "^0.6.0"
loggable-jdv = "^0.1.2"
sphinx = {version = "^3.2.1", optional = true}
sphinx_autodoc_typehints = {version = "^1.11.0", optional = true}
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
tox = {version = "^3.20.0", optional = true}
tox-conda = {version = "^0.2.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pre-commit = "^1.18"
pandas = {version = "^0.25.1", python = ">=3.6"}
pytest-cov = "^2.10.1"

[tool.poetry.extras]
docs = ['sphinx', 'sphinx_autodoc_typehints', 'sphinx_rtd_theme', 'recommonmark', 'docformatter']
xtests = ['tox', 'tox-conda']

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

